# ilmt-django

./: .gitignore  manage.py  pyproject.toml
ilmt/: asgi.py  settings.py  urls.py  wsgi.py
translate/: admin.py  models.py  serializers.py  urls.py  views.py
translate/migrations/: 0001_initial.py
